# ProjectECSEngine

./: .gitignore  CMakeLists.txt  README.md  main.c  run.bat  run.sh
include/debugger/: debug.h
include/filesystem/: file.h  filesystem.h
include/logger/: logger.h
include/math/: vec.h
src/: CMakeLists.txt
src/debugger/: debug.c
src/filesystem/: filesystem.c
src/logger/: logger.c
src/math/: vec.c
